syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "MessageProto";
package org.minbox.framework.message.pipe.core.grpc;

message MessageRequest {
    string body = 1;
}

message MessageResponse {
    string body = 1;
}

service MessageService {
    rpc takeMessage(MessageRequest) returns (MessageResponse);
}